chore: expose model using tensorflow serving (#6)

--- a/machine-learning/Dockerfile
+++ b/machine-learning/Dockerfile
@@ -12,4 +12,6 @@ COPY numbers numbers/
 
 COPY snapmath.ipynb snapmath.ipynb
 
+COPY tensorflow-serving-client.ipynb tensorflow-serving-client.ipynb
+
 EXPOSE 8888
