--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   jupyter-notebook:
     container_name: jupyter-notebook
     build:
-      context: model
+      context: machine-learning
       dockerfile: Dockerfile
     ports:
       - "8888:8888"
