--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,11 +1,72 @@
-tensorflow==2.15.0
-opencv-python==4.8.1.78
-scikit-learn==1.3.2
-matplotlib==3.8.2
-pydto==0.5.1
-numpy==1.23.5
-pandas==2.1.4
-protobuf==3.20.*
+absl-py==2.0.0
+astunparse==1.6.3
+blinker==1.7.0
+cachetools==5.3.2
+certifi==2023.11.17
+charset-normalizer==3.3.2
+click==8.1.7
+contourpy==1.1.1
+cycler==0.12.1
+Deprecated==1.2.14
 flask==3.0.0
-Flask-Limiter==3.5.0
 Flask-Cors==4.0.0
+Flask-Limiter==3.5.0
+flatbuffers==23.5.26
+fonttools==4.47.0
+gast==0.4.0
+google-auth==2.25.2
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+grpcio==1.60.0
+h5py==3.10.0
+idna==3.6
+importlib-metadata==7.0.1
+importlib-resources==6.1.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.3.2
+keras==2.13.1
+kiwisolver==1.4.5
+libclang==16.0.6
+limits==3.7.0
+Markdown==3.5.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib==3.7.4
+mdurl==0.1.2
+numpy==1.23.5
+oauthlib==3.2.2
+opencv-python==4.8.1.78
+opt-einsum==3.3.0
+ordered-set==4.1.0
+packaging==23.2
+pandas==2.0.3
+Pillow==10.1.0
+protobuf==3.20.3
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pydto==0.5.1
+pygments==2.17.2
+pyparsing==3.1.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
+requests==2.31.0
+requests-oauthlib==1.3.1
+rich==13.7.0
+rsa==4.9
+scikit-learn==1.3.2
+scipy==1.10.1
+six==1.16.0
+tensorboard==2.13.0
+tensorboard-data-server==0.7.2
+tensorflow==2.13.1
+tensorflow-estimator==2.13.0
+tensorflow-io-gcs-filesystem==0.34.0
+termcolor==2.4.0
+threadpoolctl==3.2.0
+typing-extensions==4.5.0
+tzdata==2023.4
+urllib3==2.1.0
+werkzeug==3.0.1
+wrapt==1.16.0
+zipp==3.17.0
